--- a/EVENT.IN/css/daftareo.css
+++ b/EVENT.IN/css/daftareo.css
@@ -5,7 +5,7 @@
     scroll-snap-align: center;
 }
 body{
-    background: linear-gradient(315deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/5.jpg);
+    background: linear-gradient(315deg, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../img/7.jpg);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -28,6 +28,11 @@ body{
 }
 .menu{
     margin-top: -30px;
+}
+.menu .container .nav{
+    margin: 0 340px;
+    background-color: #121212;
+    border-radius: 10px;
 }
 .menu .container .media{
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.5), 0 0 50px rgba(0, 0, 0, 0.3);
